--- a/backend/static/css/album.css
+++ b/backend/static/css/album.css
@@ -1,3 +1,6 @@
+main {
+  font-family: "Poppins", sans-serif !important;
+}
 :root {
   --jumbotron-padding-y: 3rem;
 }
@@ -6,7 +9,7 @@
   padding-top: var(--jumbotron-padding-y);
   padding-bottom: var(--jumbotron-padding-y);
   margin-bottom: 0;
-  background-color: #fff;
+  background-color: #76b852;
 }
 @media (min-width: 768px) {
   .jumbotron {
@@ -33,7 +36,14 @@ footer {
 }
 
 footer p {
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
-.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+.box-shadow {
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
+}
+
+.btn-margin {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
