--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -1,59 +1,108 @@
 {% load static %}
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="icon" href="../../../../favicon.ico" />
 
     <title>interNito</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'css/album.css' %}" rel="stylesheet">
+    <link href="{% static 'css/album.css' %}" rel="stylesheet" />
+
+    <!--Poppins Font Family-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-
+  <style>
+    .logoAnchor:hover,
+    .logoAnchor {
+      text-decoration: none;
+      color: #76b852;
+    }
+  </style>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a
+    style="color: #76b852"
+      class="logoAnchor navbar-brand"
+      ><strong>inter<big>N</big>ito</strong></a>
+    
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'home' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'company' %}">Companies</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'experience' %}">Experiences</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'write' %}">Write</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'about' %}">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="ml-2 btn btn-outline-primary" href="{% url 'login' %}"
+            >Log In</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="ml-2 btn btn-outline-secondary" href="{% url 'register' %}">Register</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <body>
-
-    <div class="sticky-top d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-        <h4 class="my-0 mr-md-auto font-weight-normal"><a href="{% url 'home' %}" class=" text-decoration-none"><strong>inter<big>N</big>ito</strong></a></h4>
-        <nav class="my-2 my-md-0 mr-md-3">
-          <a class="p-2 text-dark" href="{% url 'company' %}">Companies</a>
-          <a class="p-2 text-dark" href="{% url 'experience' %}">Experience</a>
-          <a class="p-2 text-dark" href="#">Search</a>
-          <a class="p-2 text-dark" href="#">Write</a>
-        </nav>
-        <a class="btn btn-outline-primary" href="{% url 'login' %}">Sign up</a>
-        <a class="ml-2 btn btn-outline-secondary" href="{% url 'register' %}">Register</a>
-      </div>
-
-      
-      {% block content %}
-          
-      {% endblock content %}
-          
+    {% block content %} {% endblock content %}
 
 
-    <footer class="text-muted">
-      <div class="container d-none">
-        <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-        <p>New to Bootstrap? <a href="../../">Visit the homepage</a> or read our <a href="../../getting-started/">getting started guide</a>.</p>
+    <footer>
+      <div class="container" style="text-align: center">
+        <p>
+          Copyright © 2021 interNito
+        </p>
       </div>
     </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
     <script>
-      var link = "{% static 'js/jquery-slim.min.js' %}"
-      window.jQuery || document.write('<script src="'+link+'"><\/script>')
+      var link = "{% static 'js/jquery-slim.min.js' %}";
+      window.jQuery || document.write('<script src="' + link + '"><\/script>');
     </script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
