--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block content %}
 
-<link rel="stylesheet" href="{% static 'css/register.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'css/register.css' %}"> -->
 
-<script type="application/x-javascript"> 
+<script type="application/x-javascript">
   addEventListener("load", function() { 
     setTimeout(hideURLbar, 0); 
   }, false); 
@@ -12,56 +12,107 @@
     window.scrollTo(0,1); 
   } 
 </script>
+
+<style>
+	body {
+		background-color: #E5E5E5;
+	}
+
+	* {
+		font-family: 'Poppins', sans-serif;
+	}
+
+	.view-btn {
+		padding: 7px;
+		font-weight: 500;
+		font-size: 1.1rem;
+		color: #76b852;
+		background-color: white;
+		border-radius: 45px;
+		border: 1px solid #76b852;
+		width: 100%;
+	}
+
+	.view-btn:hover {
+		color: white;
+		border-radius: 45px;
+		border: 1px solid #76b852;
+		background-color: #76b852;
+		outline: none;
+		box-shadow: none;
+	}
+
+	.view-btn:focus {
+		outline: none;
+		box-shadow: none;
+	}
+
+	a {
+		text-decoration: none;
+		color: #76b852;
+		font-weight: 500;
+	}
+
+	a:hover {
+		text-decoration: none;
+		color: #76b852;
+		font-weight: 600;
+	}
+
+	textarea:focus {
+		outline: #76b852;
+		border-color: #76b852;
+		border-radius: 30px;
+	}
+
+	.register-text {
+		margin-top: 10px;
+		margin-left: 5px
+	}
+
+	h2 {
+		font-weight: 400;
+	}
+
+	.card {
+		border-radius: 30px;
+	}
+
+	@media only screen and (max-width: 600px) {
+		.card {
+			margin: 20px !important;
+		}
+	}
+
+	input {
+		border-radius: 30px !important;
+	}
+</style>
 <!-- //Custom Theme files -->
 <link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
 </head>
-	<!-- main -->
-	<div class="main-w3layouts wrapper">
-		<h1>Login to Your Account</h1>
-		<div class="main-agileinfo">
-			<div class="agileits-top">
-				<form action="#" method="post">
-					<input class="text email" type="email" name="email" placeholder="Email" required="">
-					<input class="text w3lpass" type="password" name="password" placeholder="Password" required="">
-					<input class="text d-none" type="password" name="password" placeholder="Confirm Password" required="">
-					<input type="submit" value="SIGNUP">
-				</form>
-				<p>Don't have an Account? <a href="{% url 'register' %}"> Register Now!</a></p>
-			</div>
-		</div>
-		<!-- //copyright -->
-		<ul class="colorlib-bubbles">
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
-	</div>
-    
 
-<!-- <link rel="stylesheet" href="{% static 'css/sign-in.css'%}">
-<div class="text-center body">
-  <form class="form-signin">
-    <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
-  </form>
-</div> -->
+<div class="card mt-5" style="max-width: 35rem; margin: 20px auto;">
+	<div class="card-body justify-content-center">
+		<h2 class="card-title text-center mb-4 mt-2">Login to Your Account</h2>
+		<form action="">
+			<div class="form-group">
+				<label for="email">Email Address</label>
+				<input type="text email" type="email" name="email" placeholder="Email" required="" class="form-control">
+			</div>
+			<div class="form-group">
+				<label for="password">Password</label>
+				<input type="password" name="password" placeholder="Password" required="" class="form-control">
+			</div>
+			<button class="btn submit view-btn mt-3">Login</button>
+			<p class="card-text register-text mb-2">Don't have an account? <a href="{% url 'register' %}"> Register
+					Now!</a></p>
+
+			{% comment %} <p class="card-text register-text mb-2"><a href="{% url 'register' %}"> Forgot your
+					password?</a></p> {% endcomment %}
+
+		</form>
+	</div>
+</div>
+
 {% endblock content %}
-    
