--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -1,51 +1,123 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<link rel="stylesheet" href="{% static 'css/register.css' %}">
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } 
+
+<!-- <link rel="stylesheet" href="{% static 'css/register.css' %}"> -->
+
+<script type="application/x-javascript">
+  addEventListener("load", function() { 
+    setTimeout(hideURLbar, 0); 
+  }, false); 
+  function hideURLbar(){ 
+    window.scrollTo(0,1); 
+  } 
 </script>
+
+<style>
+	body {
+		background-color: #E5E5E5;
+	}
+
+	* {
+		font-family: 'Poppins', sans-serif;
+	}
+
+	.view-btn {
+		padding: 7px;
+		font-weight: 500;
+		font-size: 1.1rem;
+		color: #76b852;
+		background-color: white;
+		border-radius: 45px;
+		border: 1px solid #76b852;
+		width: 100%;
+	}
+
+	.view-btn:hover {
+		color: white;
+		border-radius: 45px;
+		border: 1px solid #76b852;
+		background-color: #76b852;
+		outline: none;
+		box-shadow: none;
+	}
+
+	.view-btn:focus {
+		outline: none;
+		box-shadow: none;
+	}
+
+	a {
+		text-decoration: none;
+		color: #76b852;
+		font-weight: 500;
+	}
+
+	a:hover {
+		text-decoration: none;
+		color: #76b852;
+		font-weight: 600;
+	}
+
+	textarea:focus {
+		outline: #76b852;
+		border-color: #76b852;
+	}
+
+	.register-text {
+		margin-top: 10px;
+		margin-left: 5px
+	}
+
+	h2 {
+		font-weight: 400;
+	}
+
+	.card {
+		border-radius: 30px;
+	}
+
+	@media only screen and (max-width: 600px) {
+		.card {
+			margin: 20px !important;
+		}
+	}
+
+
+	input {
+		border-radius: 30px !important;
+	}
+</style>
 <!-- //Custom Theme files -->
-<!-- web font -->
 <link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
-<!-- //web font -->
 </head>
-<body>
-	<!-- main -->
-	<div class="main-w3layouts wrapper">
-		<h1>Creative SignUp Form</h1>
-		<div class="main-agileinfo">
-			<div class="agileits-top">
-				<form action="#" method="post">
-					<input class="text" type="text" name="Username" placeholder="Username" required="">
-					<input class="text email" type="email" name="email" placeholder="Email" required="">
-					<input class="text" type="password" name="password" placeholder="Password" required="">
-					<input class="text w3lpass" type="password" name="password" placeholder="Confirm Password" required="">
-					<div class="wthree-text">
-						<label class="anim">
-							<input type="checkbox" class="checkbox" required="">
-							<span>I Agree To The Terms & Conditions</span>
-						</label>
-						<div class="clear"> </div>
-					</div>
-					<input type="submit" value="SIGNUP">
-				</form>
-				<p>Don't have an Account? <a href="#"> Login Now!</a></p>
+
+<div class="card mt-5" style="max-width: 35rem; margin: 20px auto;">
+	<div class="card-body justify-content-center">
+		<h2 class="card-title text-center mb-4 mt-2">Create Your Account!</h2>
+		<form action="">
+			<div class="form-group">
+				<label for="username">Username</label>
+				<input type="text username" type="email" name="username" placeholder="Username" required=""
+					class="form-control">
 			</div>
-		</div>
-		<!-- //copyright -->
-		<ul class="colorlib-bubbles">
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
+			<div class="form-group">
+				<label for="email">Email Address</label>
+				<input type="text email" type="email" name="email" placeholder="Email" required="" class="form-control">
+			</div>
+			<div class="form-group">
+				<label for="password">Password</label>
+				<input type="password" name="password" placeholder="Password" required="" class="form-control">
+			</div>
+			<div class="form-group">
+				<label for="password">Confirm Password</label>
+				<input type="password" name="password" placeholder="Confirm Password" required="" class="form-control">
+			</div>
+			<button class="btn submit view-btn mt-3">Sign Up</button>
+			<p class="card-text register-text mb-2">Already have an account? <a href="{% url 'login' %}"> Login Now!</a>
+			</p>
+		</form>
 	</div>
+</div>
 
 {% endblock content %}
-    
