--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -94,17 +94,19 @@
 
 <div class="card mt-5" style="max-width: 35rem; margin: 20px auto;">
 	<div class="card-body justify-content-center">
+		{{error}}
 		<h2 class="card-title text-center mb-4 mt-2">Login to Your Account</h2>
-		<form action="">
+		<form action="{% url 'login' %}" method="POST">
+			{% csrf_token %}
 			<div class="form-group">
 				<label for="email">Email Address</label>
-				<input type="text email" type="email" name="email" placeholder="Email" required="" class="form-control">
+				<input type="text email" type="email" name="username" placeholder="Email" required="" class="form-control">
 			</div>
 			<div class="form-group">
 				<label for="password">Password</label>
-				<input type="password" name="password" placeholder="Password" required="" class="form-control">
+				<input type="password" name="password" placeholder="password" required="" class="form-control">
 			</div>
-			<button class="btn submit view-btn mt-3">Login</button>
+			<button class="btn submit view-btn mt-3" type="submit">Login</button>
 			<p class="card-text register-text mb-2">Don't have an account? <a href="{% url 'register' %}"> Register
 					Now!</a></p>
 
