--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -97,23 +97,28 @@
 		<h2 class="card-title text-center mb-4 mt-2">Create Your Account!</h2>
 		<form action="">
 			<div class="form-group">
-				<label for="username">Username</label>
-				<input type="text username" type="email" name="username" placeholder="Username" required=""
+				<label for="username">First Name</label>
+				<input type="text username" type="text" name="first_name" placeholder="First Name" required=""
+					class="form-control">
+			</div>
+			<div class="form-group">
+				<label for="username">Last Name</label>
+				<input type="text username" type="text" name="last_name" placeholder="Last Name" required=""
 					class="form-control">
 			</div>
 			<div class="form-group">
 				<label for="email">Email Address</label>
-				<input type="text email" type="email" name="email" placeholder="Email" required="" class="form-control">
+				<input type="text email" type="email" name="email" placeholder="Email Address" required="" class="form-control">
 			</div>
 			<div class="form-group">
 				<label for="password">Password</label>
-				<input type="password" name="password" placeholder="Password" required="" class="form-control">
+				<input type="password" name="password1" placeholder="Create a password" required="" class="form-control">
 			</div>
 			<div class="form-group">
 				<label for="password">Confirm Password</label>
-				<input type="password" name="password" placeholder="Confirm Password" required="" class="form-control">
+				<input type="password" name="password2" placeholder="Re-enter Password" required="" class="form-control">
 			</div>
-			<button class="btn submit view-btn mt-3">Sign Up</button>
+			<button class="btn submit view-btn mt-3" type="Submit">Sign Up</button>
 			<p class="card-text register-text mb-2">Already have an account? <a href="{% url 'login' %}"> Login Now!</a>
 			</p>
 		</form>
