Register Login Logout Working

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -34,7 +34,7 @@
       color: #76b852;
     }
   </style>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <a
     style="color: #76b852"
       class="logoAnchor navbar-brand"
